[package]
name = "silkroad-patch-archiver"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.37.0", features = ["full"] }
skrillax-stream = { path = "../skrillax-network/crates/skrillax-stream" }
skrillax-serde = { path = "../skrillax-network/crates/skrillax-serde", features = ["derive"] }
skrillax-packet = { path = "../skrillax-network/crates/skrillax-packet", features = ["derive"] }
reqwest = "0.12.4"
serde = { version = "1.0.199", features = ["derive"] }
color-eyre = "0.6.3"
toml = "0.8.12"
