[package]
name = "silkroad-patch-archiver"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.37.0", features = [
    "rt-multi-thread",
    "macros",
    "fs",
    "signal",
] }
skrillax-stream = "0.1"
skrillax-serde = { version = "0.1", features = ["derive"] }
skrillax-packet = { version = "0.2", features = ["derive"] }
reqwest = { version = "0.12.4", features = [
    "rustls-tls",
], default-features = false }
serde = { version = "1.0.199", features = ["derive"] }
color-eyre = "0.6.3"
toml = "0.8.12"
